# esp32-W0L

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: contributing-microlink-fix.md  docs.html  index.html  robots.txt  sitemap.xml  style.css
lib/tailscale/: CMakeLists.txt  Kconfig
lib/tailscale/include/: ts.h  ts_internal.h  ts_peer_registry.h
lib/tailscale/src/: ts.c  ts_connection.c  ts_coordination.c  ts_derp.c  ts_disco.c  ts_disco_zerocopy.c  ts_peer_registry.c  ts_stun.c  ts_udp.c  ts_wireguard.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
microlink/: CMakeLists.txt
microlink/include/: microlink.h
microlink/src/: microlink_coordination.c  microlink_disco.c  microlink_stun.c  microlink_wireguard.c
scripts/: setup.sh  wake-pc
